--- a/about.html
+++ b/about.html
@@ -1,12 +1,28 @@
 ---
-layout: page
-title: About Me
-description: This is what I do.
-background: '/img/bg-about.jpg'
+layout: default
+navigationName: "About"
+title: "About"
+description: "Get to know more about me."
+coverImg: "about-bg.jpg"
+group: "navigation"
+order: 2
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<!-- Main Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                
+          	<p style="text-align:center">Hi there! I'm Shobhit.<br><br>
+                I was born in 1990. I'm based out of New Delhi <img src="http://shobhitsingh.in/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
+           
+            <p style="text-align:center">Passionate about Data Analytics, Data Science, Database & Cloud Computing.</p>
+<p style="text-align:center">Interests: Music, Travelling & Blogging Sometimes</p>
+<p style="text-align:center">If you’d like to get in touch, feel free to <a href="mailto:shobhitsingh.in@outlook.com">connect</a>!</p>
+<p style="text-align:center">Thanks for stopping by!</p>
+<p style="text-align:center"><a href="http://shobhitsingh.in/">shobhitsingh.in</a></p>				
+        </div>
+    </div>
+</div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
-
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<hr>
