--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: default
 navigationName: "About"
 title: "About"
 description: "Get to know more about me."
-coverImg: "about-bg.jpg"
+background: '/img/about-bg.jpg'
 group: "navigation"
 order: 2
 ---
