--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: "About"
-description: "Get to know more about me."
+layout: page
+title: About me
+description: Get to know more about me!
 background: '/img/about-bg.jpg'
 ---
 
@@ -11,7 +11,7 @@ background: '/img/about-bg.jpg'
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 
           	<p style="text-align:center">Hi there! I'm Shobhit.<br><br>
-                I was born in 1990. I'm based out of New Delhi <img src="http://shobhitsingh.in/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
+                I was born in 1990. I'm based out of Noida, India <img src="http://shobhitsingh.in/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
            
             <p style="text-align:center">Passionate about Data Analytics, Data Science, Database & Cloud Computing.</p>
 <p style="text-align:center">Interests: Music, Travelling & Blogging Sometimes</p>
