--- a/about.html
+++ b/about.html
@@ -4,22 +4,10 @@ title: About me
 description: Get to know more about me!
 background: '/img/about-bg.jpg'
 ---
-
-<!-- Main Content -->
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 
-          	<p style="text-align:center">Hi there! I'm Shobhit.<br><br>
-                I was born in 1990. I'm based out of Noida, India <img src="http://shobhitsingh.in/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
-           
-            <p style="text-align:center">Passionate about Data Analytics, Data Science, Database & Cloud Computing.</p>
-<p style="text-align:center">Interests: Music, Travelling & Blogging Sometimes</p>
-<p style="text-align:center">If you’d like to get in touch, feel free to <a href="mailto:shobhitsingh.in@outlook.com">connect</a>!</p>
-<p style="text-align:center">Thanks for stopping by!</p>
-<p style="text-align:center"><a href="http://shobhitsingh.in/">shobhitsingh.in</a></p>				
-        </div>
-    </div>
-</div>
+<p>Hi there! I'm Shobhit. I was born in 1990. I'm based out of Noida, India <img src="http://shobhitsingh.in/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
+<p>Passionate about Data Analytics, Big Data, Database & Cloud Computing. Interests: Music, Travelling & Writing Blogs</p>
+<p>If you’d like to get in touch, feel free to <a href="mailto:shobhitsingh.in@outlook.com">connect</a>!</p>
+<p>Thanks for stopping by!</p>
+<p><a href="http://shobhitsingh.in/">shobhitsingh.in</a></p>				
 
-<hr>
