--- a/about.html
+++ b/about.html
@@ -5,9 +5,8 @@ description: Get to know more about me!
 background: '/img/about-bg.jpg'
 ---
                 
-<p>Hi there! I'm Shobhit. I was born in 1990. I'm based out of Noida, India <img src="http://shobhitsingh.in/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
-<p>Passionate about Data Analytics, Big Data, Database & Cloud Computing. Interests: Music, Travelling & Writing Blogs</p>
+<p>Hi there! I'm Shobhit. Based out of Noida, India <img src="http://shobhitsingh.in/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
+<p>Passionate about Big Data & Cloud Computing. Interests: Music, Travelling & Writing Blogs</p>
 <p>If you’d like to get in touch, feel free to <a href="mailto:shobhitsingh.in@outlook.com">connect</a>!</p>
-<p>Thanks for stopping by!</p>
-<p><a href="http://shobhitsingh.in/">shobhitsingh.in</a></p>				
+<p>Thanks for stopping by!</p>		
 
