--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ description: Get to know more about me!
 background: '/img/about-bg.jpg'
 ---
                 
-<p>Hi there! I'm Shobhit. Based out of Noida, India <img src="https://www.shobhitsingh.in/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
+<p>Hi there! I'm Shobhit. Based out of Noida, India <img src="https://shobhit-singh.github.io/my-personal-website/images/IN.png" alt="India Flag" width="20" height="15" /> </p>	
 <p>Passionate about Big Data & Cloud Computing. Interests: Music, Travelling & Writing Blogs</p>
 <p>If you’d like to get in touch, feel free to <a href="mailto:shobhitsingh.in@outlook.com">connect</a>!</p>
 <p>Thanks for stopping by!</p>		
